--- a/src/main/resources/templates/create_parent.html
+++ b/src/main/resources/templates/create_parent.html
@@ -20,21 +20,20 @@
 
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/students}">Student Management</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/teachers}">Teacher Management</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/parents}">Parent Management</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/subjects}">Subject Management</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/courses}">Course Management</a>
-        </li>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/students}">Student Management</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/teachers}">Teacher Management</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/parents}">Parent Management</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/subjects}">Subject Management</a>
+            </li>
+        </ul>
     </div>
 </nav>
 <br>
@@ -49,8 +48,8 @@
                         <label> Father Name</label>
                         <input
                                 type="text"
-                                name="FatherName"
-                                th:field="*{FatherName}"
+                                name="fatherName"
+                                th:field="*{fatherName}"
                                 class="form-control"
                                 placeholder="Enter Parent First Name"
                         />
@@ -60,8 +59,8 @@
                         <label> Mother Name</label>
                         <input
                                 type="text"
-                                name="MotherName"
-                                th:field="*{MotherName}"
+                                name="motherName"
+                                th:field="*{motherName}"
                                 class="form-control"
                                 placeholder="Enter Parent Last Name"
                         />
@@ -71,8 +70,8 @@
                         <label> Address </label>
                         <input
                                 type="text"
-                                name="Address"
-                                th:field="*{Address}"
+                                name="address"
+                                th:field="*{address}"
                                 class="form-control"
                                 placeholder="Enter Parent Email"
                         />
