--- a/src/main/resources/templates/edit_teacher.html
+++ b/src/main/resources/templates/edit_teacher.html
@@ -22,7 +22,16 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/teachers}">Student Management</a>
+                <a class="nav-link" th:href="@{/students}">Student Management</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/teachers}">Teacher Management</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/parents}">Parent Management</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/subjects}">Subject Management</a>
             </li>
         </ul>
     </div>
