--- a/src/main/resources/templates/subjects.html
+++ b/src/main/resources/templates/subjects.html
@@ -33,16 +33,13 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/subjects}">Subject Management</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/courses}">Course Management</a>
-            </li>
         </ul>
     </div>
 </nav>
 
 <div class="container">
     <div class = "row">
-        <h1> List Sunject </h1>
+        <h1> List Subject </h1>
     </div>
 
     <div class="row">
