--- a/src/main/resources/templates/edit_teacher.html
+++ b/src/main/resources/templates/edit_teacher.html
@@ -41,39 +41,39 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-            <h1 class="text-center"> Update Student </h1>
+            <h1 class="text-center"> Update Teacher </h1>
             <div class = "card-body">
-                <form th:action="@{/students/{id}(id=${student.id})}" th:object="${student}" method="POST">
+                <form th:action="@{/teachers/{id}(id=${teacher.id})}" th:object="${teacher}" method="POST">
                     <div class="form-group">
-                        <label> Student First Name</label>
+                        <label> Teacher First Name</label>
                         <input
                                 type="text"
                                 name="firstName"
                                 th:field="*{firstName}"
                                 class="form-control"
-                                placeholder="Enter Student First Name"
+                                placeholder="Enter Teacher First Name"
                         />
                     </div>
 
                     <div class="form-group">
-                        <label> Student Last Name</label>
+                        <label> Teacher Last Name</label>
                         <input
                                 type="text"
                                 name="lastName"
                                 th:field="*{lastName}"
                                 class="form-control"
-                                placeholder="Enter Student Last Name"
+                                placeholder="Enter Teacher Last Name"
                         />
                     </div>
 
                     <div class="form-group">
-                        <label> Student Email</label>
+                        <label> Teacher Email</label>
                         <input
                                 type="text"
                                 name="email"
                                 th:field="*{email}"
                                 class="form-control"
-                                placeholder="Enter Student Email"
+                                placeholder="Enter Teacher Email"
                         />
                     </div>
 
